--- a/package.json
+++ b/package.json
@@ -7,19 +7,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "jest",
-    "coverage": "jest --coverage"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@babel/preset-react": "^7.26.3",
     "@reduxjs/toolkit": "^2.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "babel-jest": "^29.7.0",
-    "babel-preset-env": "^1.7.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
